context/source-materials/legacy/changeswork-full/planning/mvp/versions/v6.1/tasks/mvp_tasks_deployments_page.md
# Задачи для страницы "Внедрения" (Deployments List View)

## Обзор страницы

**Страница:** Список внедрений (Deployments List View)
**Путь в макете:** Боковое меню → "Внедрения"
**Статус:** Новая разработка

### Что показывает страница (из макета):

**Табличное представление со столбцами:**
- ID (DEP-XXX)
- Название
- Инициатива (название инициативы)
- Статус (draft/requires_approval/approved/deployed/rolled_back)
- Критичность (автоматический расчет: MAX критичности всех скоркарт)
- Создал (автор)
- Создано (дата создания)
- Развернуто (дата внедрения)

**Функционал:**
- Фильтрация по продукту (dropdown)
- Фильтрация по статусу
- Поиск по названию
- Сортировка по столбцам
- Пагинация
- Клик на строку → переход к детальному просмотру

**Права доступа:**
- ПРМ видит только внедрения своего продукта
- Методолог видит все внедрения
- Админ видит все внедрения

---

## AN-C1: Аналитика страницы "Внедрения"

**Тип:** Story
**Приоритет:** Критический
**Оценка:** 5 дней

### Summary
Детализация требований для разработки страницы списка внедрений под новую архитектуру

### Description

Провести аналитику для разработки страницы списка внедрений:

1. **Детализация бизнес-требований:**
   - Уточнить логику отображения статусов внедрения
   - Определить правила автоматического расчета критичности (MAX скоркарт)
   - Определить правила доступа для разных ролей
   - Уточнить отображение внедрения (название)

2. **Спецификация UI/UX:**
   - Разработка таблицы (8 столбцов)
   - Спецификация фильтров и поиска
   - Дизайн статусных бейджей
   - Дизайн чипа критичности
   - Спецификация пагинации

3. **Спецификация API контракта:**
   - GET /api/deployments/ - список с фильтрацией
   - Параметры запроса (product_id, status, search, page, page_size, ordering)
   - Формат ответа (список + метаданные пагинации)
   - Коды ошибок (403, 404, 500)

4. **Определение полей таблицы:**
   - ID (формат DEP-XXX)
   - Название (обязательное, кликабельное)
   - Внедрение (название внедрения)
   - Статус (цветной бейдж)
   - Критичность (автоматический расчет, цветной чип)
   - Создал (ФИО автора)
   - Создано (формат DD.MM.YYYY HH:MM)
   - Развернуто (формат DD.MM.YYYY HH:MM или "—")

### Acceptance Criteria

- [ ] Бизнес-требования задокументированы
- [ ] API контракт задокументирован
- [ ] Определены все поля таблицы с типами данных
- [ ] Правила расчета критичности описаны
- [ ] Правила фильтрации и сортировки описаны
- [ ] Права доступа для ролей определены
- [ ] Документ согласован с заказчиком

### Dependencies
Нет

### Deliverables
- Документ "Спецификация страницы Внедрения" (markdown/confluence)
- API контракт для GET /api/deployments/

---
## BE-C1: Backend для страницы "Внедрения"

**Тип:** Story
**Приоритет:** Критический
**Оценка:** 3 дня

### Summary
Разработка API endpoint для списка внедрений с фильтрацией, пагинацией и автоматическим расчетом критичности

### Description

Разработать Backend API для страницы списка внедрений:

1. **API Endpoint: GET /api/deployments/**

   **Параметры запроса:**
   - `product_id` (optional) - фильтр по продукту
   - `status` (optional) - фильтр по статусу (draft/requires_approval/approved/deployed/rolled_back)
   - `search` (optional) - поиск по названию (case-insensitive, partial match)
   - `page` (optional, default=1) - номер страницы
   - `page_size` (optional, default=20) - размер страницы
   - `ordering` (optional, default='-created_at') - сортировка

   **Формат ответа:**
   ```json
   {
     "count": 42,
     "next": "http://api/deployments/?page=2",
     "previous": null,
     "results": [
       {
         "id": "uuid",
        "display_id": "DEP-001",
         "name": "Внедрение новой скоркарты Premium",
         "deployment": {
           "id": "uuid",
           "display_id": "DEP-001",
           "name": "Оптимизация риск-стратегии Premium карт"
         },
         "status": "approved",
         "criticality": "high",
         "criticality_calculated": true,
         "created_at": "2026-03-01T10:00:00Z",
         "created_by": {
           "id": "user-uuid",
           "full_name": "Иван Иванов"
         },
         "deployed_at": "2026-03-15T14:30:00Z"
       }
     ]
   }
   ```

2. **Бизнес-логика:**
   - Автоматический расчет критичности: MAX(criticality) всех связанных скоркарт
   - Фильтрация по правам доступа:
     - ПРМ видит только свой продукт
     - Методолог видит все
     - Админ видит все
   - Поиск по названию (case-insensitive, ILIKE для PostgreSQL)
   - Сортировка по умолчанию: -created_at (новые первые)

3. **Права доступа:**
   - Middleware проверяет роль пользователя
   - Автоматическая фильтрация по product_id для ПРМ
   - HTTP 403 если ПРМ пытается получить чужой продукт

4. **Оптимизация:**
   - Select related для deployment, created_by
   - Prefetch related для scorecards (для расчета критичности)
   - Annotate для критичности (если возможно)
   - Индексы на product_id, status, created_at

### Acceptance Criteria

- [ ] GET /api/deployments/ endpoint реализован
- [ ] Фильтрация по product_id, status работает
- [ ] Поиск по названию работает (case-insensitive)
- [ ] Пагинация работает корректно (default page_size=20)
- [ ] Сортировка по умолчанию: -created_at
- [ ] Критичность рассчитывается автоматически (MAX скоркарт)
- [ ] Права доступа реализованы (ПРМ видит только свой продукт)
- [ ] HTTP 403 возвращается при попытке доступа к чужому продукту
- [ ] Select related/prefetch оптимизация применена
- [ ] Unit тесты покрывают все сценарии (coverage > 80%)
- [ ] API документация обновлена

### Dependencies
- AN-C1 (требуется API контракт)

### Technical Notes

**Пример расчета критичности:**
```python
def calculate_criticality(deployment):
    """Рассчитать критичность как MAX критичности всех скоркарт"""
    scorecards = deployment.scorecards.all()
    if not scorecards:
        return 'low'
    
    criticality_order = {'low': 1, 'medium': 2, 'high': 3, 'critical': 4}
    max_criticality = max(
        criticality_order.get(sc.criticality, 1) 
        for sc in scorecards
    )
    
    for level, value in criticality_order.items():
        if value == max_criticality:
            return level
    
    return 'low'
```

**Пример SQL оптимизации (Django ORM):**
```python
from django.db.models import Q

Deployment.objects.filter(
    Q(name__icontains=search),
    product_id=product_id,
    status=status
).select_related(
    'deployment', 'created_by'
).prefetch_related(
    'scorecards'
).order_by('-created_at')
```

---
## FE-C1: Frontend для страницы "Внедрения"

**Тип:** Story
**Приоритет:** Критический
**Оценка:** 3 дня

### Summary
Разработка UI страницы списка внедрений с таблицей, фильтрами и автоматическим расчетом критичности

### Description

Разработать Frontend для страницы списка внедрений:

1. **Компонент DeploymentsView:**
   - Табличное представление (Material-UI Table)
   - Столбцы: ID, Название, Внедрение, Статус, Критичность, Создал, Создано, Развернуто
   - Responsive дизайн

2. **Фильтры и поиск:**
   - Dropdown фильтр по продукту
   - Dropdown фильтр по статусу
   - Поле поиска по названию (debounce 300ms)
   - Кнопка "Сбросить фильтры"

3. **Сортировка:**
   - По умолчанию: по дате создания (новые первые)
   - Клик на заголовок столбца → сортировка
   - Индикатор направления сортировки

4. **Пагинация:**
   - Material-UI Pagination компонент
   - Показывать "Показано X-Y из Z"
   - Выбор размера страницы (10/20/50)

5. **Статусные бейджи:**
   - draft: серый
   - requires_approval: оранжевый
   - approved: синий
   - deployed: зеленый
   - rolled_back: красный

6. **Критичность:**
   - Автоматический расчет (MAX скоркарт)
   - Цветной чип:
     - low: зеленый
     - medium: желтый
     - high: красный
     - critical: темно-красный

7. **Навигация:**
   - Клик на строку → переход к детальному просмотру
   - Breadcrumbs: "Внедрения"

8. **Loading и Error состояния:**
   - Skeleton loader при загрузке
   - Error message при ошибке API
   - Empty state если нет данных

9. **API интеграция:**
   - DeploymentService.getList(filters, page, pageSize, ordering)
   - Обработка ошибок (403, 404, 500)
   - Toast уведомления при ошибках

### Acceptance Criteria

- [ ] DeploymentsView компонент реализован
- [ ] Таблица отображает все 8 столбцов корректно
- [ ] Фильтр по продукту работает
- [ ] Фильтр по статусу работает
- [ ] Поиск по названию работает (с debounce)
- [ ] Сортировка по столбцам работает
- [ ] Пагинация работает корректно
- [ ] Статусные бейджи отображаются с правильными цветами
- [ ] Критичность отображается с правильным цветом
- [ ] Критичность рассчитывается автоматически
- [ ] Клик на строку открывает детальный просмотр
- [ ] Breadcrumbs отображается корректно
- [ ] Loading состояние (skeleton) работает
- [ ] Error состояние отображается
- [ ] Empty state отображается если нет данных
- [ ] Responsive дизайн работает
- [ ] API интеграция работает корректно
- [ ] Обработка ошибок реализована
- [ ] Unit тесты для компонента (coverage > 70%)

### Dependencies
- AN-C1 (требуется UI спецификация)
- BE-C1 (требуется готовый API endpoint)

---

## Итоговая зависимость задач

```
AN-C1 (1 день)
  ↓
BE-C1 (3 дня)
  ↓
FE-C1 (3 дня)
```

**Общая длительность (критический путь):** 7 дней

**Параллельная работа:**
- BE-C1 может начаться сразу после AN-C1
- FE-C1 может начаться только после готовности BE-C1

---

## ✅ Ключевые особенности страницы

1. **Новая разработка** - не адаптация существующей страницы
2. **8 столбцов в таблице** - ID, Название, Внедрение, Статус, Критичность, Создал, Создано, Развернуто
3. **Автоматический расчет критичности** - MAX критичности всех скоркарт
4. **Внедрение** - отображение названия внедрения (кликабельное)
5. **Статусы внедрения** - draft/requires_approval/approved/deployed/rolled_back
6. **Дата внедрения** - отображается только для deployed внедрений
7. **Фильтрация по продукту и статусу** - dropdown фильтры
8. **Поиск по названию** - с debounce 300ms
9. **Сортировка по умолчанию** - по дате создания (новые первые)
10. **Права доступа** - ПРМ видит только свой продукт
11. **Responsive дизайн** - адаптация под разные разрешения

---
